adding find_lanes function to p4.py

--- a/lane_finding.ipynb
+++ b/lane_finding.ipynb
@@ -350,7 +350,7 @@
     }
    ],
    "source": [
-    "def func(img, nwindows=9, margin=100):\n",
+    "def find_lanes(img, nwindows=9, margin=100):\n",
     "    # Take a histogram of the bottom half of the image\n",
     "    histogram = np.sum(img[img.shape[0]//2:,:], axis=0)\n",
     "    \n",
@@ -439,7 +439,7 @@
     "    plt.ylim(720, 0)\n",
     "    \n",
     "    \n",
-    "func(combined_binary_top_down)    \n",
+    "find_lanes(combined_binary_top_down)    \n",
     "    "
    ]
   },
