--- a/lane_finding.ipynb
+++ b/lane_finding.ipynb
@@ -445,6 +445,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'left_fit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-74-86c5c03a0338>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mmargin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m left_lane_inds = ((nonzerox > (left_fit[0]*(nonzeroy**2) + left_fit[1]*nonzeroy + \n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mleft_fit\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mmargin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnonzerox\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mleft_fit\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnonzeroy\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m left_fit[1]*nonzeroy + left_fit[2] + margin))) \n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'left_fit' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Assume you now have a new warped binary image \n",
+    "# from the next frame of video (also called \"binary_warped\")\n",
+    "# It's now much easier to find line pixels!\n",
+    "binary_warped = combined_binary_top_down\n",
+    "nonzero = binary_warped.nonzero()\n",
+    "nonzeroy = np.array(nonzero[0])\n",
+    "nonzerox = np.array(nonzero[1])\n",
+    "margin = 100\n",
+    "left_lane_inds = ((nonzerox > (left_fit[0]*(nonzeroy**2) + left_fit[1]*nonzeroy + \n",
+    "left_fit[2] - margin)) & (nonzerox < (left_fit[0]*(nonzeroy**2) + \n",
+    "left_fit[1]*nonzeroy + left_fit[2] + margin))) \n",
+    "\n",
+    "right_lane_inds = ((nonzerox > (right_fit[0]*(nonzeroy**2) + right_fit[1]*nonzeroy + \n",
+    "right_fit[2] - margin)) & (nonzerox < (right_fit[0]*(nonzeroy**2) + \n",
+    "right_fit[1]*nonzeroy + right_fit[2] + margin)))  \n",
+    "\n",
+    "# Again, extract left and right line pixel positions\n",
+    "leftx = nonzerox[left_lane_inds]\n",
+    "lefty = nonzeroy[left_lane_inds] \n",
+    "rightx = nonzerox[right_lane_inds]\n",
+    "righty = nonzeroy[right_lane_inds]\n",
+    "# Fit a second order polynomial to each\n",
+    "left_fit = np.polyfit(lefty, leftx, 2)\n",
+    "right_fit = np.polyfit(righty, rightx, 2)\n",
+    "# Generate x and y values for plotting\n",
+    "ploty = np.linspace(0, binary_warped.shape[0]-1, binary_warped.shape[0] )\n",
+    "left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "\n",
+    "# Create an image to draw on and an image to show the selection window\n",
+    "out_img = np.dstack((binary_warped, binary_warped, binary_warped))*255\n",
+    "window_img = np.zeros_like(out_img)\n",
+    "# Color in left and right line pixels\n",
+    "out_img[nonzeroy[left_lane_inds], nonzerox[left_lane_inds]] = [255, 0, 0]\n",
+    "out_img[nonzeroy[right_lane_inds], nonzerox[right_lane_inds]] = [0, 0, 255]\n",
+    "\n",
+    "# Generate a polygon to illustrate the search window area\n",
+    "# And recast the x and y points into usable format for cv2.fillPoly()\n",
+    "left_line_window1 = np.array([np.transpose(np.vstack([left_fitx-margin, ploty]))])\n",
+    "left_line_window2 = np.array([np.flipud(np.transpose(np.vstack([left_fitx+margin, \n",
+    "                              ploty])))])\n",
+    "left_line_pts = np.hstack((left_line_window1, left_line_window2))\n",
+    "right_line_window1 = np.array([np.transpose(np.vstack([right_fitx-margin, ploty]))])\n",
+    "right_line_window2 = np.array([np.flipud(np.transpose(np.vstack([right_fitx+margin, \n",
+    "                              ploty])))])\n",
+    "right_line_pts = np.hstack((right_line_window1, right_line_window2))\n",
+    "\n",
+    "# Draw the lane onto the warped blank image\n",
+    "cv2.fillPoly(window_img, np.int_([left_line_pts]), (0,255, 0))\n",
+    "cv2.fillPoly(window_img, np.int_([right_line_pts]), (0,255, 0))\n",
+    "result = cv2.addWeighted(out_img, 1, window_img, 0.3, 0)\n",
+    "plt.imshow(result)\n",
+    "plt.plot(left_fitx, ploty, color='yellow')\n",
+    "plt.plot(right_fitx, ploty, color='yellow')\n",
+    "plt.xlim(0, 1280)\n",
+    "plt.ylim(720, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
